Studio: close five non-payment product gaps (#221)
* Implement five non-payment studio gaps

Add DigitalPublication CRUD (bonus desk), media storage summary,
tenant Mailgun ESP integrations hub, subscriber CSV export, and
Write Import / Integrations nav entries with Bruno and http coverage.

Co-authored-by: LucaNerlich <LucaNerlich@users.noreply.github.com>

* Fix integrations controller ArchUnit repository dependency

Route custom template counting through TenantContentEmailTemplateService
so controllers stay free of repository dependencies.

Co-authored-by: LucaNerlich <LucaNerlich@users.noreply.github.com>

* Fix digital publication and integration HTTP fixtures and register them in fixture coverage

* Publication-policy asset gate, Mailgun test coverage, CSV formula hardening

The standalone-asset download gate now unions PACKAGE DIGITAL_ASSET grants
with a publication-policy batch gate: published FREE/LEVEL bonus files backed
by private uploads resolve in /me/downloads without an unrelated package rule,
still fail-closed. SubscriberPortalAccessService.listDownloads drops its
duplicate point checks and caps after the gate; new SubscriberPortalDownloadsIT
proves the flow end-to-end.

TransactionalEmailServiceTest covers the tenant Mailgun branch (credential
override, provider switch, claim release on failure). csvEscape neutralizes
formula-starting subscriber cells with a leading apostrophe.
parseMediaStorageBucket validates assetType/status against known enums;
publish/unpublish gained status guards consistent with delete/unarchive.

---------

Co-authored-by: Cursor Agent <cursoragent@cursor.com>
Co-authored-by: LucaNerlich <LucaNerlich@users.noreply.github.com>
Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>
Co-authored-by: pullfrog[bot] <226033991+pullfrog[bot]@users.noreply.github.com>